#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psana_examples
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-03
2012-02-06 Andy Salnikov
- add new module DumpCsPad2x2 which dumps all cspad2x2 classes
- removed MiniElementV1 from DumpCsPad

Tag: V00-02-02
2012-01-20 Andy Salnikov
- more details printed in DumpControl module

Tag: V00-02-01
2012-01-12 Andy Salnikov
- adding DumpTimepix module

Tag: V00-02-00
2011-12-09 Andy Salnikov
- migrating to ndarray for adrray data

Tag: V00-01-05
2011-10-04 Andy Salnikov
- DumpCsPad now prints common_mode from new schema and some data from images

Tag: V00-01-04
2011-09-12 Andy Salnikov
- DumpCsPad can now dump MiniElementV1 objects
- DumpBld can now dump Bld::BldDataPimV1 objects

Tag: V00-01-03
2011-08-22 Andy Salnikov
- modified DumpPrinceton to recognize ConfigV2 objects

Tag: V00-01-02
2011-06-29 Andy Salnikov
- update EBeamHist module to use new PSHist histogramming

Tag: V00-01-01
2011-06-16 Andy Salnikov
- upgrade to pdsdata V02-11-05

Tag: V00-01-00
2011-05-21 Andy Salnikov
- Module interface changed, all subclasses need update; 
  now all methods have Event argument.

Tag: V00-00-13
2011-05-07 Andy Salnikov
- fix parameter name in DumpBld

Tag: V00-00-12
2011-04-26 Andy Salnikov
- extended DumpAcqiris module to make waveforms() usage example

Tag: V00-00-11
2011-04-14 Andy Salnikov
- new module EBeamHist to test histogramming

Tag: V00-00-10
2011-04-05 Andy Salnikov
- insert missing newline in DumpEpics output

Tag: V00-00-09
2011-04-01 Andy Salnikov
- make things more uniform
- use module name for logger name, remove explicit logger name
- added data/DumpAll.cfg config file which uses all modules from this
  package

Tag: V00-00-08