@@ -11,6 +11,11 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-04
+2012-02-18 Andy Salnikov
+- added code to dump new type TimePix::DataV2
+- updated Ipimb Config code to dump diodeGain() contents
+
 Tag: V00-02-03
 2012-02-06 Andy Salnikov
 - add new module DumpCsPad2x2 which dumps all cspad2x2 classes
